--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ var _hmt = _hmt || [];
   <div class="content-box clearfix">
 
     <div id="content-title" >
-      <h2><a name="Bio">Biography</h2>
+      <h2>Biography</h2>
     </div>
     <div id="news-content" >
 	  <span style="margin: 10px 0px 0px 5px">I am currently a Second-year PhD student in School of Electronic Information and Communications at <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>, under the supervision by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>. 
