--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@ var _hmt = _hmt || [];
         <li><strong>Applied Soft Computing</strong></li>
 	<li><strong>IEEE Access</strong></li>
     </div>
-	     
+	
+    <!--
     <div id="content-title" style="margin-top: 5px">
       <h2><strong>Links to my mentors and friends</strong></h2>
       <p style="margin-top: -10px">
@@ -345,13 +346,17 @@ var _hmt = _hmt || [];
 
       </p>
     </div>
-
-   
+    -->
+     <div id="footer">
+	<div id="footer-text"></div>
+    </div>
     <div id = "logo" style="margin-top: 10px; text-align:center">
 	    <div align="center" style="margin:auto;padding-top:10px">
-            <div style="width:15%">
+            <div style="width:12%">
                 <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg"></script>
             </div>
+           <br>
+        &copy; Shiming Chen | Last updated: September 9 2020
             </div>
      </div>     
 	
