--- a/index.html
+++ b/index.html
@@ -324,15 +324,27 @@ var _hmt = _hmt || [];
 	     
     <div id = "news-content" style="margin-top: 5px">
       <h2><strong>Reviewer for the following journals</strong></h2>
-	
+	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
         <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
-	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (SMCS)</strong></li>
+	<!--<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (SMCS)</strong></li>-->
 	<li><strong>Information Fusion (INF)</strong></li>
         <li><strong>Information Sciences (INS)</strong></li>
         <li><strong>Applied Soft Computing</strong></li>
 	<li><strong>IEEE Access</strong></li>
     </div>
 	
+    <h2>Experience</h2>
+	<ul>
+	<li>
+		<div style="float:left; text-align:left">Fortsense, In-Screen Fingerprint Group. </div> <div style="float:right; text-align:right">Apr. 2018 – Sep. 2018</div><br>
+		Research Intern<br>
+		Topic: Image Retrieval, Signal Verification<br>
+	</li>
+	
+	</ul>  
+	  
+	  
+	  
     <!--
     <div id="content-title" style="margin-top: 5px">
       <h2><strong>Links to my mentors and friends</strong></h2>
@@ -348,6 +360,10 @@ var _hmt = _hmt || [];
       </p>
     </div>
     -->
+	  
+	  
+	  
+
      <div id="footer">
 	<div id="footer-text"></div>
     </div>
