--- a/index.html
+++ b/index.html
@@ -318,8 +318,9 @@ var _hmt = _hmt || [];
     </div>
     -->
 	     
-    <div id = "news-content" style="margin-top: 5px">
+
       <h2><strong>Reviewer for the following journals</strong></h2>
+   <div>
 	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
         <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
 	<!--<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (SMCS)</strong></li>-->
