--- a/CDE-GAN-website/CDE-GAN.html
+++ b/CDE-GAN-website/CDE-GAN.html
@@ -111,7 +111,7 @@
           <div class=vspace></div>
 	
 	  <div>
-	   
+	     <p>The supplementary can be downloaded <a class=urllink title="" href="figures/supplement.pdf" rel=nofollow><font color="#0000FF"><strong>here</strong></font></a> </p>
 	    <p>If you wish to use our code, please cite the following paper : </p>
 
 	  
