--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ var _hmt = _hmt || [];
      <h2>Biography</h2>
     <div id="news-content" >
 	  <span style="margin: 10px 0px 0px 5px">I am currently a Second-year PhD student in School of Electronic Information and Communications at <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>, under the supervision by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>. 
-		  My research interests include <strong>High-order representation, Generative model and learning, and Content-based image retrieval(CBIR)</strong>.</span>   
+		  My research interests span computer vision and machine learning with a series of topics, such as <i>generative modeling and learning, image retrieval, and signature verification</i>. </span>   
     </div>
 	  
      
