--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ var _hmt = _hmt || [];
    <div>
 	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
         <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
-	<!--<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (SMCS)</strong></li>-->
+	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (SMC-S)</strong></li>
 	<li><strong>Information Fusion (INF)</strong></li>
         <li><strong>Information Sciences (INS)</strong></li>
         <li><strong>Applied Soft Computing</strong></li>
