--- a/index.html
+++ b/index.html
@@ -176,7 +176,21 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 	<tbody>
 
-
+    <tr>
+	
+		<td width="206">
+		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><br>
+		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Weiping Ding, Feng Zheng, Xinge You.</p>
+        <p style="margin-top: -11px"><span style="color:Red">Submitted to <i> <strong> CVPR'2021 </strong></i> </span></p>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+		
+		
     <tr>	
 		<td width="206">
 		<img src="CDE-GAN-website/figures/CDEGAN-pipeline-new.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
