--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Weiping Ding, Feng Zheng, Xinge You.</p>
-        <p style="margin-top: -11px"><span style="color:Red">Submitted to <i> <strong> CVPR'2021 </strong></i> </span></p>
+        <p style="margin-top: -11px"><span style="color:Red">Submitted to <i> IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR'21 </strong>)</i> </span></p>
 		</td>
 	</tr>
 	<tr></tr>
