--- a/CDE-GAN-website/CDE-GAN.html
+++ b/CDE-GAN-website/CDE-GAN.html
@@ -66,15 +66,19 @@
 	  <br>
 	  
       <h2 align="center">Abstract</h2>
-      <P align="justify">Generative adversarial networks (GANs) have been a popular deep generative model for real-word applications.  Despite many recent efforts on GANs have been contributed, 
-	  however, mode collapse and instability of GANs are still open problems caused by their adversarial optimization difficulties. In this paper, motivated by the cooperative co-evolutionary algorithm,
-	  we propose a <i>Cooperative Dual Evolution based Generative Adversarial Network</i> (<strong>CDE-GAN</strong>) to circumvent these drawbacks. In essence, CDE-GAN  incorporates dual evolution with respect to
-	  generator(s) and discriminators into a unified evolutionary adversarial framework, thus it exploits the complementary properties and injects dual mutation diversity into training to steadily 
-	  diversify the estimated density in capturing multi-modes, and to improve generative performance. Specifically, CDE-GAN decomposes the complex adversarial optimization problem into two subproblems
-	  (generation and discrimination), and each subproblem is solved with a separated subpopulation (<i>E-Generators</i> and <i>E-Discriminators</i>), evolved by an individual evolutionary algorithm.
-	  Additionally, to keep the balance between E-Generators and E-Discriminators, we proposed a <i>Soft Mechanism</i> to cooperate them to conduct effective adversarial training. Extensive experiments
-	  on one synthetic dataset and three real-world benchmark image datasets, demonstrate that the proposed CDE-GAN achieves the competitive and superior performance in generating good quality and
-	  diverse samples over baselines. The code and more generated results are available at our project homepage <a class='urllink' href=' https://shiming-chen.github.io/CDE-GAN-website/CDE-GAN.html' title=''
+      <P align="justify">Generative adversarial networks (GANs) have been a popular deep generative model for real-world applications.  
+	      Despite many recent efforts on GANs that have been contributed,  mode collapse and instability of GANs are still open problems caused by their adversarial
+	      optimization difficulties. In this paper, motivated by the cooperative co-evolutionary algorithm, we propose a 
+	      \textit{Cooperative Dual Evolution based Generative Adversarial Network} (CDE-GAN) to circumvent these drawbacks. In essence, 
+	      CDE-GAN  incorporates dual evolution with respect to the generator(s) and discriminators into a unified evolutionary adversarial framework to conduct 
+	      effective adversarial multi-objective optimization. Thus it exploits the complementary properties and injects dual mutation diversity into
+	      training to steadily diversify the estimated density in capturing multi-modes and improve generative performance. Specifically, CDE-GAN decomposes the complex
+	      adversarial optimization problem into two subproblems (generation and discrimination), and each subproblem is solved with a separated subpopulation
+	      (\textit{E-Generators} and \textit{E-Discriminators}), evolved by its own evolutionary algorithm. Additionally, we further propose a \textit{Soft Mechanism} 
+	      to balance the trade-off between E-Generators and E-Discriminators to conduct steady training for CDE-GAN. Extensive experiments on one synthetic dataset and
+	      three real-world benchmark image datasets demonstrate that the proposed CDE-GAN achieves a competitive and superior performance in generating good quality
+	      and diverse samples over baselines. The code and more generated results are available at our project homepage
+	      <a class='urllink' href=' https://shiming-chen.github.io/CDE-GAN-website/CDE-GAN.html' title=''
 	  rel='nofollow'><font color="#0000FF"><strong> https://shiming-chen.github.io/CDE-GAN-website/CDE-GAN.html</strong></font></a>. </P>
 	  <div class=line> </div>
 	  <p></p>
@@ -83,10 +87,11 @@
 	  <div class="div-table-col-12" align='center'>
                 <center><img src="figures/CDEGAN-pipeline-new.jpg" width="950" height="350"></center>
 				<p></p>
-				<P align="justify"><strong>Figure:</strong>The pipeline of CDE-GAN. In brief, CDE-GAN decomposes the complex adversarial optimization problem into two subproblems (generation and discrimination), 
-				and each subproblem is solved with a separated subpopulation (i.e., E-Generatorsand E-Discriminators), evolved by an individual evolutionary algorithm
-				(including individual Variations, Evaluations and Selections). The best offspring of E-Generators and E-Discriminator are served as new parents
-				to produce the next generation's individuals (i.e., children). Furthermore, a Soft Mechanism is proposed to cooperate E-Generators and E-Discriminators to conduct effective adversarial training.</P>
+				<P align="justify"><strong>Figure:</strong>The pipeline of CDE-GAN. In brief, CDE-GAN decomposes the complex adversarial optimization problem into two
+				subproblems (generation and discrimination), and each subproblem is solved with a separated subpopulation (i.e., E-Generatorsand E-Discriminators),
+				evolved by an individual evolutionary algorithm (including individual Variations, Evaluations and Selections). The best offspring of E-Generators
+				and E-Discriminator are served as new parents to produce the next generation's individuals (i.e., children). Furthermore, a Soft Mechanism is
+					proposed to cooperate E-Generators and E-Discriminators to conduct effective adversarial training.</P>
 				
 				
 	  </div>
