--- a/Similarity-page/Similarit.html
+++ b/Similarity-page/Similarit.html
@@ -46,20 +46,15 @@
      <p style='text-align: center;'> 
        <span style="font-size: 18px"><a class='urllink' href='https://shiming-chen.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Shiming Chen</strong></font></a><sup>1</sup>,
         <a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Peng Zhang</strong></font></a><sup>1</sup>,
-	<a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
        <a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1092.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Qinmu Peng</strong></font></a><sup>1</sup>,
-        <a class='urllink' href='http://www.hqumadm.com/' title='' rel='nofollow'><font color="#0000FF"><strong>Xin Liu</strong></font></a><sup>2</sup>,
-	 <a class='urllink' href='https://czh513.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Zehong Cao</strong></font></a><sup>3</sup>,
-         and <a class='urllink' href='https://sydney.edu.au/engineering/about/our-people/academic-staff/dacheng-tao.html' title='' rel='nofollow'><font color="#0000FF"><strong>Dacheng Tao</strong></font></a><sup>4</sup>
+	 <a class='urllink' href='https://czh513.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Zehong Cao</strong></font></a><sup>2</sup>,
+         and <a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>
 	    </span><br>
 	     
      </p>
       <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Huaqiao University, China</p>
-      <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>3</sup>University of Tasmania (UTAS), Australia &nbsp &nbsp <sup>4</sup> University of Sydney (USYD), Australia  </p>
-      <p class='vspace STYLE2' style='text-align: center;'>
-          <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn  &nbsp   xliu@hqu.edu.cn  &nbsp  zehong.cao@utas.edu.au  &nbsp  dacheng.tao@sydney.edu.au </font> </p>
+        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>University of Tasmania (UTAS), Australia</p>
+          <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn   &nbsp  zehong.cao@utas.edu.au </font> </p>
 
       <div class=vspace> </div>
 	  <div class=line> </div>
