--- a/Similarity-page/Similarit.html
+++ b/Similarity-page/Similarit.html
@@ -54,7 +54,7 @@
      </p>
       <p class='vspace STYLE2' style='text-align: center;'>
         <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>University of Tasmania (UTAS), Australia</p>
-          <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn   &nbsp  zehong.cao@utas.edu.au </font> </p>
+         <p class='vspace STYLE2' style='text-align: center;'> <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn   &nbsp  zehong.cao@utas.edu.au </font> </p>
 
       <div class=vspace> </div>
 	  <div class=line> </div>
