--- a/index.html
+++ b/index.html
@@ -176,19 +176,19 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 	<tbody>
 
-    <tr>
+   <!-- <tr>
 	
 		<td width="206">
 		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="paper/FREE-CVPR2021.pdf">PDF</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Feng Zheng, Weiping Ding, Xinge You.</p>
-        <!--<p style="margin-top: -11px"><span style="color:Red">Submitted to <i> IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR'21 </strong>)</i> </span></p>-->
+        <!--<p style="margin-top: -11px"><span style="color:Red">Submitted to <i> IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR'21 </strong>)</i> </span></p>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
-    <tr></tr>
+    <tr></tr>-->
 	
 		
     <tr>	
