--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ var _hmt = _hmt || [];
 	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (SMCA)</strong></li>
 	<li><strong>Information Fusion (INF)</strong></li>
         <li><strong>Information Sciences (INS)</strong></li>
+	<li><strong>Neurocomputing</strong></li>
         <li><strong>Applied Soft Computing</strong></li>
 	<li><strong>IEEE Access</strong></li>
     </div>
