--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ var _hmt = _hmt || [];
    <div>
 	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
         <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
-	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (SMCA)</strong></li>
+	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA)</strong></li>
 	<li><strong>Information Fusion (INF)</strong></li>
         <li><strong>Information Sciences (INS)</strong></li>
 	<li><strong>Neurocomputing</strong></li>
