--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <!--<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2019.11.14</span>, one paper is submitted to <strong><i>CVPR2020</i></strong>.</li>-->
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted by <strong><i>Information Sciences</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.01.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted by <strong><i>Information Sciences</i></strong>.</li>
 	    
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted by <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li>
     </div>
