--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a><br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 2021, accepted. <strong>[<a href="CDE-GAN-website/CDE-GAN.html">
-		Project Page</a>][<a href="https://arxiv.org/abs/2008.09388">arXiv</a>] [<a href="CDE-GAN-website/figures/CDE-GAN.pdf">PDF</a>](IF=11.169,CCF-B)</strong></p>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 2021, accepted. <strong>
+		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>][<a href="https://arxiv.org/abs/2008.09388">arXiv</a>] [<a href="CDE-GAN-website/figures/CDE-GAN.pdf">PDF</a>](IF=11.169,CCF-B)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
