--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is conditionally accepted by <strong><i>IEEE Transactions on Evolutionary Computation</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted by <strong><i>Information Sciences</i></strong>.</li>
 	    
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted by <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li>
@@ -125,7 +125,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a><br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 2021, conditionally accepted. <strong>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 2021, accepted. <strong>
 		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>][<a href="https://arxiv.org/abs/2008.09388">arXiv</a>] [<a href="CDE-GAN-website/figures/CDE-GAN.pdf">PDF</a>](IF=11.169,CCF-B)</strong></p>
 		</td>
 	</tr>
