--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
      <h2>Biography</h2>
     <div id="news-content" >
 	  <span style="margin: 10px 0px 0px 5px">I am currently a Second-year PhD student in School of Electronic Information and Communications at <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>, under the supervision by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>. 
-		  My research interests span computer vision and machine learning with a series of topics, such as <strong><i>generative modeling and learning, zero-shot learning</i></strong>, and <strong><i>image retrieval</i></strong>. </span>   
+		  My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>generative modeling and learning</i></strong>, and its applications in <strong><i>zero-shot learning, domain adaptation</i></strong>. </span>   
     </div>
 	  
      
