--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IJCAI'21</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted by <strong><i>Information Sciences</i></strong>.</li>
 	    
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted by <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li>
@@ -117,7 +118,19 @@ var _hmt = _hmt || [];
 	<tr></tr>
     <tr></tr>
     <tr></tr>-->
-	
+  
+     <tr>	
+		<td width="206">
+		<img src="CDE-GAN-website/figures/CDEGAN-pipeline.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a><br>
+		<p >Wenjie Wang, <strong>Shiming Chen</strong>, Yufeng Shi, Qinmu Peng, Feng Zheng, Xinge You</p>
+	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021, accepted. <strong>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
 		
     <tr>	
 		<td width="206">
