--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@ var _hmt = _hmt || [];
   
      <tr>	
 		<td width="206">
-		<img src="CDE-GAN-website/figures/CDEGAN-pipeline.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="https://github.com/shiming-chen/shiming-chen.github.io/blob/master/IJCAI21.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a><br>
+		<td><a href="" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a><br>
 		<p >Wenjie Wang, <strong>Shiming Chen</strong>, Yufeng Shi, Qinmu Peng, Feng Zheng, Xinge You</p>
-	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021, accepted. <strong>
+	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021. <strong>CCF-A</strong>
 		</td>
 	</tr>
 	<tr></tr>
