--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 	<tbody>
 
-  <!-- <tr>
+  <tr>
 	
 		<td width="206">
 		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="paper/FREE.pdf">PDF</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, , Xinge You Feng Zheng, Lin Shao.</p>
-       <p style="margin-top: -11px"><span style="color:Red">Submitted to <i> IEEE International Conference on Computer Vision (<strong> ICCV'21 </strong>)</i> </span></p>
+       <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV'21 </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
-    <tr></tr>-->
+    <tr></tr>
   
      <tr>	
 		<td width="206">
