--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one paper is accepted by <strong><i>IJCAI'21</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted by <strong><i>ICCV'21</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one paper is accepted by <strong><i>IJCAI'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted by <strong><i>Information Sciences (INS)</i></strong>.</li>
 	    
@@ -111,7 +112,7 @@ var _hmt = _hmt || [];
 		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="paper/FREE.pdf">PDF</a>]</strong><br>
-		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, , Xinge You Feng Zheng, Lin Shao.</p>
+		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Xinge You, Feng Zheng, Lin Shao.</p>
        <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV'21 </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
 	</tr>
