--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="paper/FREE.pdf">PDF</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Xinge You, Feng Zheng, Lin Shao.</p>
-       <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV'21 </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
+       <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
