--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@ var _hmt = _hmt || [];
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted by <strong><i>ICCV'21</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.05.06</span>, I joint in Alibaba DAMO Academy as Research Intern.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one paper is accepted by <strong><i>IJCAI'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I joint in ECI at HUST for pursuing Ph.D.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted by <strong><i>Information Sciences (INS)</i></strong>.</li>
-	    
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted by <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li>
     </div>
      
@@ -289,6 +290,11 @@ var _hmt = _hmt || [];
 	
     <h2>Experience</h2>
 	<ul>
+        <li>
+		<div style="float:left; text-align:left">Alibaba DAMO Academy, Computer Vision Lab. </div> <div style="float:right; text-align:right">Apr. 2020 – Sep. 2020</div><br>
+		Research Intern<br>
+		Topic: Zero-shot Learning, Domain Adaptation, Transformer<br>
+	</li>
 	<li>
 		<div style="float:left; text-align:left">Fortsense, In-Screen Fingerprint Group. </div> <div style="float:right; text-align:right">Apr. 2020 – Sep. 2020</div><br>
 		Research Intern<br>
