--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ var _hmt = _hmt || [];
     <h2>Experience</h2>
 	<ul>
         <li>
-		<div style="float:left; text-align:left">Alibaba DAMO Academy, Computer Vision Lab. </div> <div style="float:right; text-align:right">Apr. 2020 – Sep. 2020</div><br>
+		<div style="float:left; text-align:left">Alibaba DAMO Academy, Machine Intelligence, Vision Lab. </div> <div style="float:right; text-align:right">May. 2021 – Present</div><br>
 		Research Intern<br>
 		Topic: Zero-shot Learning, Domain Adaptation, Transformer<br>
 	</li>
