--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@ var _hmt = _hmt || [];
     </div>
      
 	  
-    <h2>Pre-print and Publications </h2>
+    <h2>Publications </h2>
 <!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
 <table id="tbPublications" width="100%">
 	<tbody>
-
+<h3>Preprints </h3>
   <tr>
 	
 		<td width="206">
