--- a/index.html
+++ b/index.html
@@ -123,7 +123,11 @@ var _hmt = _hmt || [];
 	<tr></tr>
     <tr></tr>
     <tr></tr>
-  
+ </tbody>
+</table>
+	      
+<table id="tbPublications" width="100%">
+<tbody>
 <h3><strong>Conference Papers </strong></h3>
 <tr>
 	
@@ -151,7 +155,11 @@ var _hmt = _hmt || [];
 	<tr></tr>
     <tr></tr>
     <tr></tr>
-	
+</tbody>
+</table>
+		
+<table id="tbPublications" width="100%">
+<tbody>	
 <h3><strong>Journal Papers </strong></h3>
     <tr>	
 		<td width="206">
