--- a/index.html
+++ b/index.html
@@ -101,12 +101,13 @@ var _hmt = _hmt || [];
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted by <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li>
     </div>
      
-	  
+ <tr><tr><tr><tr>
+<div style="margin-top: 10px"></div>
     <h2>Publications </h2>
 <!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
 <table id="tbPublications" width="100%">
 	<tbody>
-<h3><strong>Preprints </strong></h3>
+<h3 style="color: red"><strong>Preprints </strong></h3>
 		
    <tr>	
 		<td width="206">
@@ -128,7 +129,7 @@ var _hmt = _hmt || [];
 	      
 <table id="tbPublications" width="100%">
 <tbody>
-<h3><strong>Conference Papers </strong></h3>
+<h3 style="color: red"><strong>Conference Papers </strong></h3>
 <tr>
 	
 		<td width="206">
@@ -160,7 +161,7 @@ var _hmt = _hmt || [];
 		
 <table id="tbPublications" width="100%">
 <tbody>	
-<h3><strong>Journal Papers </strong></h3>
+<h3 style="color: red"><strong>Journal Papers </strong></h3>
     <tr>	
 		<td width="206">
 		<img src="CDE-GAN-website/figures/CDEGAN-pipeline.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
