--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ var _hmt = _hmt || [];
 <!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
 <table id="tbPublications" width="100%">
 	<tbody>
-<h3 style="color: red"><strong>Preprints </strong></h3>
+<h3 style="color: red">Preprints</h3>
 		
    <tr>	
 		<td width="206">
@@ -129,7 +129,7 @@ var _hmt = _hmt || [];
 	      
 <table id="tbPublications" width="100%">
 <tbody>
-<h3 style="color: red"><strong>Conference Papers </strong></h3>
+<h3 style="color: red">Conference Papers </h3>
 <tr>
 	
 		<td width="206">
@@ -161,7 +161,7 @@ var _hmt = _hmt || [];
 		
 <table id="tbPublications" width="100%">
 <tbody>	
-<h3 style="color: red"><strong>Journal Papers </strong></h3>
+<h3 style="color: red">Journal Papers</h3>
     <tr>	
 		<td width="206">
 		<img src="CDE-GAN-website/figures/CDEGAN-pipeline.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
