--- a/Similarity-page/Similarit.html
+++ b/Similarity-page/Similarit.html
@@ -47,13 +47,16 @@
        <span style="font-size: 18px"><a class='urllink' href='https://shiming-chen.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Shiming Chen</strong></font></a><sup>1</sup>,
         <a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Peng Zhang</strong></font></a><sup>1</sup>,
        <a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1092.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Qinmu Peng</strong></font></a><sup>1</sup>,
-	 <a class='urllink' href='https://czh513.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Zehong Cao</strong></font></a><sup>2</sup>,
-         and <a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>
+	<a class='urllink' href='https://scholar.google.com/citations?hl=en&user=LKaWa9gAAAAJ' title='' rel='nofollow'><font color="#0000FF"><strong>Guo-Sen Xie</strong></font></a><sup>2</sup>,
+	<a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Wei Yuan</strong></font></a><sup>1</sup>,
+        <a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
+	 and <a class='urllink' href='https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en' title='' rel='nofollow'><font color="#0000FF"><strong>Ling Shao</strong></font></a><sup>2</sup>
 	    </span><br>
 	     
      </p>
       <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>University of Tasmania (UTAS), Australia</p>
+        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Inception Institute of Artificial Intelligence
+			(IIAI), UAE</p>
          <p class='vspace STYLE2' style='text-align: center;'> <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn   &nbsp  zehong.cao@utas.edu.au </font> </p>
 
       <div class=vspace> </div>
@@ -61,21 +64,17 @@
 	  <br>
 	  
       <h2 align="center">Abstract</h2>
-      <P align="justify">Dynamic texture (DT) exhibits statistical stationarity in the spatial domain and stochastic repetitiveness
-	      in the temporal dimension, indicating that different frames of DT possess high similarity correlation that is a critical
-	      prior knowledge. However, existing methods cannot effectively learn a promising synthesis model for high-dimensional DT
-	      from a small number of training data. In this paper, we propose a novel DT synthesis method, which makes full use of 
-	      similarity prior knowledge to address this issue. Our method based on the proposed kernel similarity embedding, 
-	      which not only can mitigate the high-dimensionality and small sample issue, but also has the advantage of modelling
-	      nonlinear feature relationship. Specifically, we first raise two hypotheses that are essential for DT model to generate 
-	      new frames using similarity correlation. Then, we integrate kernel learning and extreme learning machine into a unified 
-	      synthesis model to learn kernel similarity embedding for representing DT. Extensive experiments on DT videos collected 
-	      from internet and two benchmark datasets, i.e., Gatech Graphcut Textures and Dyntex, demonstrate that the learned kernel
-	      similarity embedding effectively exhibits the discriminative representation for DT. Hence our method is capable of preserving
-	      long-term temporal continuity of the synthesized DT sequences with excellent sustainability and generalization. 
-	      We also show that our method effectively generates realistic DT videos with fast speed and low computation, 
-	      compared with the state-of-the-art methods. The code and more synthesis videos are available at 
-	      our project page <a class=urllink title="" href="https://shiming-chen.github.io/Similarity-page/Similarit.html" rel=nofollow> https://shiming-chen.github.io/Similarity-page/Similarit.html</a>. </P>
+      <P align="justify">Dynamic texture (DT) exhibits statistical stationarity in the spatial domain and stochastic repetitiveness in the temporal dimension, 
+	      indicating that different frames of DT possess a high similarity correlation that is critical prior knowledge. However, existing methods cannot effectively 
+	      learn a synthesis model for high-dimensional DT from a small number of training samples. In this paper, we propose a novel DT synthesis method, which makes 
+	      full use of similarity as prior knowledge to address this issue. Our method is based on the proposed kernel similarity embedding, which can not only mitigate 
+	      the high-dimensionality and small sample issues, but also has the advantage of modeling nonlinear feature relationships. Specifically, we first put forward two
+	      hypotheses that are essential for the DT model to generate new frames using similarity correlations. Then, we integrate kernel learning and the extreme learning
+	      machine into a unified synthesis model to learn kernel similarity embeddings for representing DTs. Extensive experiments on DT videos collected from the internet
+	      and two benchmark datasets, i.e., Gatech Graphcut Textures and Dyntex, demonstrate that the learned kernel similarity embeddings can provide discriminative 
+	      representations for DTs. Further, our method can preserve the long-term temporal continuity of the synthesized DT sequences with excellent sustainability and
+	      generalization. Meanwhile, it effectively generates realistic DT videos with higher speed and lower computation than the current state-of-the-art methods. 
+	      The code and more synthesis videos are available at our project page <a class=urllink title="" href="https://shiming-chen.github.io/Similarity-page/Similarit.html" rel=nofollow> https://shiming-chen.github.io/Similarity-page/Similarit.html</a>. </P>
 	  <div class=line> </div>
 	  <p></p>
        <h2>Material </h2>
