--- a/Similarity-page/Similarit.html
+++ b/Similarity-page/Similarit.html
@@ -57,7 +57,7 @@
       <p class='vspace STYLE2' style='text-align: center;'>
         <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Inception Institute of Artificial Intelligence
 			(IIAI), UAE</p>
-         <p class='vspace STYLE2' style='text-align: center;'> <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn   &nbsp  zehong.cao@utas.edu.au </font> </p>
+         <p class='vspace STYLE2' style='text-align: center;'> <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn   &nbsp  ling.shao@ieee.org </font> </p>
 
       <div class=vspace> </div>
 	  <div class=line> </div>
