--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@ var _hmt = _hmt || [];
       <h2><strong>Reviewer for the following journals</strong></h2>
    <div>
 	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
+	<li><strong>IEEE Transactions on Neural Networks and Learning Systems (TNNLS)</strong></li>
         <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
 	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA)</strong></li>
 	<li><strong>Information Fusion (INF)</strong></li>
