--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="paper/FREE.pdf">PDF</a>]</strong><br>
+		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Xinge You, Feng Zheng, Ling Shao.</p>
        <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
