--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ var _hmt = _hmt || [];
                 <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg"></script>
             </div>
            <br>
-        &copy; Shiming Chen | Last updated: April 29 2021
+        &copy; Shiming Chen | <span style="color:Red">Last updated: September 5 2021</span>
             </div>
      </div>     
 	
