--- a/index.html
+++ b/index.html
@@ -289,21 +289,8 @@ var _hmt = _hmt || [];
       </p>
     </div>
     -->
-	     
-
-      <h2><strong>Reviewer for the following journals</strong></h2>
-   <div>
-	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
-	<li><strong>IEEE Transactions on Neural Networks and Learning Systems (TNNLS)</strong></li>
-        <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
-	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA)</strong></li>
-	<li><strong>Information Fusion (INF)</strong></li>
-        <li><strong>Information Sciences (INS)</strong></li>
-	<li><strong>Neurocomputing</strong></li>
-        <li><strong>Applied Soft Computing</strong></li>
-    </div>
-	
-    <h2>Experience</h2>
+   
+    <h2>Industrial Experience</h2>
 	<ul>
         <li>
 		<div style="float:left; text-align:left">Alibaba DAMO Academy, Machine Intelligence, Vision Lab. Hosted by <a href="https://www.cse.msu.edu/~rongjin/">Rong Jin</a> </div> <div style="float:right; text-align:right">May. 2021 – Present</div><br>
@@ -317,6 +304,20 @@ var _hmt = _hmt || [];
 	</li>
 	
 	</ul>  
+
+      <h2><strong>Academic Experience:Reviewer</strong></h2>
+   <div>
+	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
+	<li><strong>IEEE Transactions on Neural Networks and Learning Systems (TNNLS)</strong></li>
+        <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
+	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA)</strong></li>
+	<li><strong>Information Fusion (INF)</strong></li>
+        <li><strong>Information Sciences (INS)</strong></li>
+	<li><strong>Neurocomputing</strong></li>
+        <li><strong>Applied Soft Computing</strong></li>
+    </div>
+	
+   
 	  
 	  
 	  
