--- a/Similarity-page/Similarit.html
+++ b/Similarity-page/Similarit.html
@@ -50,14 +50,12 @@
 	<a class='urllink' href='https://scholar.google.com/citations?hl=en&user=LKaWa9gAAAAJ' title='' rel='nofollow'><font color="#0000FF"><strong>Guo-Sen Xie</strong></font></a><sup>2</sup>,
 	<a class='urllink' href='https://czh513.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Zehong Cao</strong></font></a><sup>3</sup>,
 	 <a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Wei Yuan</strong></font></a><sup>1</sup>,
-        <a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
-	 and <a class='urllink' href='https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en' title='' rel='nofollow'><font color="#0000FF"><strong>Ling Shao</strong></font></a><sup>2</sup>
+        and <a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
 	    </span><br>
 	     
      </p>
       <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Inception Institute of Artificial Intelligence
-			(IIAI), UAE <\br> <sup>3</sup>University of South Australia, Australia</p>
+        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup> Nanjing University of Science and Technology, China </br> <sup>3</sup>University of South Australia, Australia</p>
          <p class='vspace STYLE2' style='text-align: center;'> <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, zp_zhg, youxg, pengqinmu}@hust.edu.cn   &nbsp  ling.shao@ieee.org </font> </p>
 
       <div class=vspace> </div>
