--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted by <strong><i>ICCV'21</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted by <strong><i>NeurIPS'21</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted by <strong><i>ICCV'21</i></strong>.</li>
       <!--<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.05.06</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>-->
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted by <strong><i>IJCAI'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
@@ -130,6 +131,21 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>
 <h3 style="color: red">Conference Papers </h3>
+	
+<tr>
+	
+		<td width="206">
+		<img src="img/Fmotivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
+		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
+       <p style="margin-top: -11px"><i>Thirty-fifth Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	
+	
 <tr>
 	
 		<td width="206">
@@ -349,7 +365,7 @@ var _hmt = _hmt || [];
                 <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg"></script>
             </div>
            <br>
-        &copy; Shiming Chen | <span style="color:Red">Last updated: September 5 2021</span>
+        &copy; Shiming Chen | <span style="color:Red">Last updated: September 29 2021</span>
             </div>
      </div>     
 	
