--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ var _hmt = _hmt || [];
 <tr>
 	
 		<td width="206">
-		<img src="img/Fmotivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/motivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
