--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
-       <p style="margin-top: -11px"><i>Thirty-fifth Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
+       <p style="margin-top: -11px"><i>Advances in Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
