--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/motivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
+		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
        <p style="margin-top: -11px"><i>Advances in Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
