--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
+		<td> <a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Xinge You, Feng Zheng, Ling Shao.</p>
        <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
@@ -164,7 +164,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/IJCAI21.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a><br>
+		<td><a href="https://www.ijcai.org/proceedings/2021/0153.pdf" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a>[<a href="https://www.ijcai.org/proceedings/2021/0153.pdf">PDF</a>]<br>
 		<p >Wenjie Wang, <strong>Shiming Chen</strong>, Yufeng Shi, Qinmu Peng, Feng Zheng, Xinge You</p>
 	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021. <strong>(CCF-A)</strong>
 		</td>
@@ -185,7 +185,7 @@ var _hmt = _hmt || [];
 		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a><br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 2021, accepted. <strong>
-		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>][<a href="https://arxiv.org/abs/2008.09388">arXiv</a>] [<a href="CDE-GAN-website/figures/CDE-GAN.pdf">PDF</a>](SCI, IF=11.554, CCF-B)</strong></p>
+		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>][<a href="https://arxiv.org/abs/2008.09388">arXiv</a>] [<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>](SCI, IF=11.554, CCF-B)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
