--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var _hmt = _hmt || [];
       <!--<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.05.06</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>-->
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted by <strong><i>IJCAI'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted by <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I begin my Ph.D study in EIC at <strong>HUST</strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted by <strong><i>Information Sciences (INS)</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted by <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li>
     </div>
