--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ var _hmt = _hmt || [];
     <h2>Industrial Experience</h2>
 	<ul>
         <li>
-		<div style="float:left; text-align:left">Alibaba DAMO Academy, Machine Intelligence, Vision Lab. Hosted by <a href="https://www.cse.msu.edu/~rongjin/">Rong Jin</a> </div> <div style="float:right; text-align:right">May. 2021 – Present</div><br>
+		<div style="float:left; text-align:left">Alibaba DAMO Academy, Machine Intelligence, Vision Lab. Hosted by <a href="https://www.cse.msu.edu/~rongjin/">Rong Jin</a> </div> <div style="float:right; text-align:right">May. 2021 – Sept. 2021</div><br>
 		Research Intern<br>
 		Topic: Zero-shot Learning, Domain Adaptation, Transformer<br>
 	</li>
