--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head><TITLE>Similarity-DT: Kernel similarity embedding for Dynamic Texture Synthesis</TITLE>
+<head><TITLE>TransZero++: Cross Attribute-Guided Transformer for Zero-Shot Learning</TITLE>
 <META content="text/html; charset=UTF-8" http-equiv=Content-Type>
 
 <META content=IE=Edge,chrome=1 http-equiv=X-UA-Compatible>
