--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -261,13 +261,9 @@
       <p></p>
       <h2>Acknowledgement</h2>
 
-      <p align="justify">This work was supported in part by the National Natural Science Foundation of China~(61571205 and 61772220), 
-	      the Key Program for International S\&T Cooperation Projects of China~(2016YFE0121200), the Special Projects for Technology Innovation of Hubei Province~(2018ACA135), 
-		  the Key Science and Technology Innovation Program of Hubei Province~(2017AAA017), the Natural Science Foundation of Hubei Province~(2018CFB691), 
-		  fund from Science, Technology and Innovation Commission of Shenzhen Municipality~(JCYJ20180305180637611, JCYJ20180305180804836 and JSGG20180507182030600).
-		  We thank Dr. 
-	      <a class='urllink' href='http://www.stat.ucla.edu/~jxie/' title='' rel='nofollow'><font color="#0000FF"><strong> Jianwen Xie</strong></font></a>
-	      for his suggestions.</p>
+      <p align="justify">This work is partially supported by NSFC~(61772220,62006244), Special projects for technological innovation in Hubei Province~(2018ACA135),
+	      Key R\&D Plan of Hubei Province~(2020BAB027) and 2020-2022 Young Elite Scientist Sponsorship Program from China Association for Science and Technology
+	      YESS20200140.</p>
       <div class=line> </div>
       
 	   <p></p>
