--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -58,8 +58,8 @@
         <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Mohamed bin Zayed University of AI (MBZUAI), UAE</p>
       <p class='vspace STYLE2' style='text-align: center;'>
         <sup>3</sup>Institute of North Electronic Equipment, China &nbsp &nbsp<sup>4</sup>Sea AI Lab (SAIL), Singapore</p>
-	  <!-- <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>5</sup> National Center for Artificial Intelligence (NCAI), Saudi Data and Artificial Intelligence Authority (SDAIA), Saudi Arabia</p>-->
+	  <p class='vspace STYLE2' style='text-align: center;'>
+        <sup>5</sup> National Center for Artificial Intelligence (NCAI), Saudi Data and Artificial Intelligence Authority (SDAIA), Saudi Arabia</p>
       <p class='vspace STYLE2' style='text-align: center;'>
           <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, youxg}@hust.edu.cn  &nbsp    gsxiehm@gmail.com  &nbsp  zhaojian90@u.nus.edu  &nbsp  ling.shao@ieee.org </font> </p>
 
