--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -61,7 +61,7 @@
 	  <p class='vspace STYLE2' style='text-align: center;'>
         <sup>5</sup> National Center for Artificial Intelligence (NCAI), Saudi Data and Artificial Intelligence Authority (SDAIA), Saudi Arabia</p>
       <p class='vspace STYLE2' style='text-align: center;'>
-          <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, youxg}@hust.edu.cn  &nbsp    gsxiehm@gmail.com  &nbsp  zhaojian90@u.nus.edu  &nbsp  ling.shao@ieee.org </font> </p>
+          <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, youxg}@hust.edu.cn  &nbsp &nbsp {hoongzm, gsxiehm}@gmail.com  &nbsp &nbsp  zhaojian90@u.nus.edu </br> &nbsp&nbsp shuicheng.yan@gmail.com &nbsp &nbsp ling.shao@ieee.org </font></p>
 
       <div class=vspace> </div>
 	  <div class=line> </div>
@@ -122,17 +122,20 @@
 	   <div class=line> </div>
 	  <p></p>
 	  <h2>Evaluation</h2>
-	  <p class="STYLE15">There are three popular challenging benchmark datasets used for evaluating our method: <a class=urllink title="" href="http://www.vision.caltech.edu/visipedia/CUB-200-2011.html" rel=nofollow><font size="4.2" font-weight="bold" color="#0000FF">CUB</font></a>, <a class=urllink title="" href="http://cs.brown.edu/~gmpatter/sunattributes.html" rel=nofollow><font size="4.2" color="#0000FF">SUN</font></a>, and <a class=urllink title="" href="http://cvml.ist.ac.at/AwA2/" rel=nofollow><font size="4.2" color="#0000FF">AWA2</font></a>.
-      <p>
+	  <p class="STYLE15">There are three popular challenging benchmark datasets used for evaluating our method: <a class=urllink title="" href="http://www.vision.caltech.edu/visipedia/CUB-200-2011.html" rel=nofollow><font size="4.2" font-weight="bold" color="#0000FF">CUB</font></a>, <a class=urllink title="" href="http://cs.brown.edu/~gmpatter/sunattributes.html" rel=nofollow><font size="4.2" color="#0000FF">SUN</font></a>, and <a class=urllink title="" href="http://cvml.ist.ac.at/AwA2/" rel=nofollow><font size="4.2" color="#0000FF">AWA2</font></a>. Some sampls are presented below.
+      </p>
 	  <cneter><p>
 		   <span class="STYLE15">We conduct experiments both in <strong>Conventional Zero-Shot Learning (CZSL)</strong> and <strong>Generalized Zero-Shot Learning (GZSL)</strong> settings. In the CZSL setting, we predict the unseen classes to compute the accuracy of test samples, i.e., <strong>ACC</strong>. In the GZSL setting,  we calculate the accuracy of the test samples from both the seen classes (denoted as <strong>S</strong>) and unseen classes (denoted as <strong>U</strong>), and their harmonic mean <strong>H</strong>.
 	   </span></p></center>
+	  <div class="div-table-col-12" align='center'>
+                <center><img src="figures/samples.png" width="920" height="300"></center></br>
+	  </div>
 	  
 	  <div class=line> </div>
 	  
 	  <h3 class="STYLE16" id="exp1">Experiment 1: Comparison with State-of-the-Art</h3>
 	  <div class="div-table-col-12" align='center'>
-                <center><img src="figures/Exp1.png" width="920" height="700"></center>
+                <center><img src="figures/Exp1.png" width="920" height="650"></center>
 				<p></p>
 	  </div>
 	 <div class=line> </div>
