--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ var _hmt = _hmt || [];
 		
    <tr>	
 		<td width="206">
-		<img src="img/similarity_embedding1.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/TransZero-TPAMI.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="TransZero-pp/TransZero-pp.html" target="_blank">TransZero++: Cross Attribute-guided Transformer for Zero-Shot Learning.</a><br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-Sen Xie, Jian Zhao, Xinge You, Shuicheng Yan, Ling Shao.</p>
@@ -132,11 +132,6 @@ var _hmt = _hmt || [];
     <tr></tr>
     <tr></tr>
  </tbody>
-</table>
-
-<table id="tbPublications" width="100%">
-	<tbody>
-<h3 style="color: red">Preprints</h3>
 		
    <tr>	
 		<td width="206">
