--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -154,7 +154,11 @@
 	  <p></p>
 	  
 	  <h3 class="STYLE16">Experiment 3: t-SNE Visualization</h3>
-	  <p class="STYLE15">t-SNE visualizations of visual features for <strong>(a) CUB</strong>, <strong>(b) SUN</strong> and <strong>(c) AWA2</strong>,learned by the CNN backbone, TransZero++(AVT) encoder w/o FA, TransZero++(AVT) encoder, TransZero++(AVT) decoder, TransZero++(VAT) encoder w/o FA, TransZero++(VAT) encoder, TransZero++(VAT) decoder and TransZero++(VAT and VAT). The 10 colors denote 10 different seen/unseen classes randomly selected from these datasets. Results show that our various model components in TransZero++ learn the discriminative visual feature representations, while CNN backbone (e.g., ResNet101) failed.</p>
+	  <p class="STYLE15">t-SNE visualizations of visual features for <strong>(a) CUB</strong>, <strong>(b) SUN</strong> and <strong>(c) AWA2</strong>,
+			learned by the CNN backbone, TransZero++(AVT) encoder w/o FA, TransZero++(AVT) encoder, TransZero++(AVT) decoder, TransZero++(VAT) encoder w/o FA,
+			TransZero++(VAT) encoder, TransZero++(VAT) decoder and TransZero++(VAT and VAT). The 10 colors denote 10 different seen/unseen classes randomly selected
+			from these datasets. Results show that our various model components in TransZero++ learn the discriminative visual feature representations,
+			while CNN backbone (e.g., ResNet101) failed. <strong>For each group, the first two row are the visualizations of visual feature on seen classes, the other two row are on unseen classes. </strong></p>
 	  <div class="div-table-col-12" align='center'>
                 <center><img src="figures/CUB-Seen.png" width="920" height="480"></center>
 				<center><img src="figures/CUB-Unseen.png" width="920" height="480"></center>
