--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -158,7 +158,7 @@
 			learned by the CNN backbone, TransZero++(AVT) encoder w/o FA, TransZero++(AVT) encoder, TransZero++(AVT) decoder, TransZero++(VAT) encoder w/o FA,
 			TransZero++(VAT) encoder, TransZero++(VAT) decoder and TransZero++(VAT and VAT). The 10 colors denote 10 different seen/unseen classes randomly selected
 			from these datasets. Results show that our various model components in TransZero++ learn the discriminative visual feature representations,
-			while CNN backbone (e.g., ResNet101) failed. <strong>For each group, the first two row are the visualizations of visual feature on seen classes, the other two row are on unseen classes. </strong></p>
+			while CNN backbone (e.g., ResNet101) failed. <strong>For each group, the first two rows are the visualizations of visual feature on seen classes, and the other two rows are on unseen classes. </strong></p>
 	  <div class="div-table-col-12" align='center'>
                 <center><img src="figures/CUB-Seen.png" width="920" height="480"></center>
 				<center><img src="figures/CUB-Unseen.png" width="920" height="480"></center>
