--- a/index.html
+++ b/index.html
@@ -218,7 +218,10 @@ var _hmt = _hmt || [];
 		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a><br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 25:986-1000, 2021. <strong>
-		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>][<a href="https://arxiv.org/abs/2008.09388">arXiv</a>] [<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>](SCI, IF=11.554, CCF-B)</strong></p>
+		 [<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
+		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]
+		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]
+		 (SCI, IF=11.554, CCF-B)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
