--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ var _hmt = _hmt || [];
 				</p>
 			</td>
 			<td>
-				<a href="https://shiming-chen.github.io/"><img src="img/chen.jpg" alt="Shiming Chen" border="0" width="300"></a><br>
+				<a href="https://shiming-chen.github.io/"><img src="img/chen1.jpg" alt="Shiming Chen" border="0" width="300"></a><br>
 			</td>
 		</tr><tr>
 	</tr>
